--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,10 +16,11 @@
 <h3>Add New Genre(s)</h3>
 
 <%=form_for @book, :html => {:id => "update_form"} do |f|%>
-<%= f.collection_check_boxes :genre_ids, Genre.all, :id, :name %>
-<%= f.fields_for :genres, @book.genres.build do |genres_fields| %><br>
+<%= f.fields_for :genres, @book.genres.build do |genres_fields| %>
 <%= genres_fields.text_field :name%>
-<%end%>
+<%end%><br><br>
+<%= f.collection_check_boxes :genre_ids, Genre.all, :id, :name %>
+<section id="newBox"></section><br><br>
 <%=f.submit "Update Genre(s)"%>
 <%end%><br>
 
