--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,28 @@
+<section id="wholePage">
+
 <% if flash[:notice] %>
    <div class="notice"><%= flash[:notice] %></div>
  <% end %>
-
+<%if @book.book_edit?%>
+  <h1 id="bookTitleEdit" class="bookShow" class="index-head" data-id="<%= @book.id %>"><%=@book.title%></h1>
+  <%= form_for @book, :html => {:id => "update_title_author"} do |f| %>
+  <%=f.label "Title:"%>
+  <%=f.text_field :title%><br><br>
+  <h3 id="bookAuthorEdit" >Author: <%=link_to @book.author_name, author_path(@book.author)%></h3>
+  <%=f.label "Author:"%>
+    <%= f.text_field :author_name, list: "authors_autocomplete" %>
+    <datalist id="authors_autocomplete">
+      <% Author.all.each do |author| %>
+        <option value="<%= author.name %>">
+      <% end %>
+    </datalist><br><br>
+    <%= f.submit "Update Title and Author"%>
+    <% end %>
+<%else%>
 <h1 class="bookShow" class="index-head" data-id="<%= @book.id %>"><%=@book.title%></h1>
 <text class="new"><%=link_to "New Review", new_book_review_path(@book)%></text>
 <h3>Author: <%=link_to @book.author_name, author_path(@book.author)%></h3>
+<%end%><br>
 <h3>Genres</h3>
 
 <ul id="genreList">
@@ -25,7 +43,7 @@
 <%end%><br>
 
 <%if @book.book_edit?%>
-<%=link_to "Edit Book", edit_book_path(@book)%>
+<a href="#" class="js-edit" data-id="<%=@book.id%>">Edit Book</a>
 <%end%><br><br>
 
 <h3>Reviews</h3>
@@ -38,3 +56,5 @@
 <p class="r-content"><%=review.content%></p><br>
 <%end%>
 </div>
+
+</section>
